# alkansya

./: README.md  pyproject.toml
adhoc/: csv_converter.py  data_cleaning.py
alkansya/: contants.py  data_generators.py  spark_utils.py  utils.py
alkansya/feature_engineering/: spark_queries.py  spark_query.py  transformers.py
alkansya/modelling/: data_generators.py  forecasters.py
configurations/: DEV.yml
notebooks/: exploration.ipynb  forecasting.ipynb
